exports[`attest has correct payload in JWT for an attestation 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "claim": Object {
      "email": "bingbangbung@email.com",
    },
    "exp": 1485321134,
    "iat": 1485321133,
    "iss": "0x001122",
    "sub": "0x112233",
  },
  "signature": "kO5mGjkW6vkvE_JjWfKrt-ZSITo_EXoRIslhDCss78bM2458nQF-wBiFzIWtvjC38TR2NrLh6trz8wG_auTEig",
}
`;

exports[`configNetworks if networks key is passed in it must contain configuration object 1`] = `"Network configuration object required"`;

exports[`configNetworks should require a registry address 1`] = `"Malformed network config object, object must have \'registry\' key specified."`;

exports[`configNetworks should require a rpcUrl 1`] = `"Malformed network config object, object must have \'rpcUrl\' key specified."`;

exports[`createAttestationRequest has correct payload in JWT for a request 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "0x001122",
    "sub": "did:uport:223ab45",
    "type": "attReq",
    "unsignedClaims": Array [
      Object {
        "claim": Object {
          "test": Object {
            "prop1": 1,
            "prop2": 2,
          },
        },
      },
    ],
  },
  "signature": "YM7DQRvh5vi4pLlWPJ5JHacmxJarnt2HhfYqwd0njEwwcYLsSMaK0yPFPDUqXwbdDdeLE7Sbc1ezbLm_Fw78TQ",
}
`;

exports[`createRequest has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "kUs_SxnmUvmAa7-NKJ_qiIoODAB_MgCEMdmkw6pGy3ULMwQ-KWh6-M5CYkvPxPyHoDHVB5yGcFmTMxp_PU8a-g",
}
`;

exports[`createRequest has correct payload in JWT for a request 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "n8RNFvH4VY4BGM9Tvm9sw_UlPMi5dLX66bkCv8I_6TGcyS7trpPsjttZjilYnGCakzWtnok9D9aqFsd2W5Qkng",
}
`;

exports[`createRequest has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "signature": "qmFvkl3wvtQiV7QAlLEljP-Uv_4wdNqsgcX_c9T0DFWfQE_p2nI0XugDHOAyF6_DTDhMxoNZvhLq6awUmlFGHA",
}
`;

exports[`createRequest has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "GNWPTAF9blrt7TtMps-j6Lt28bM9zzGCmj6S10nmLltgWIM4fLamibv2w1ktt-LtIFlU6cPTsnlOJr0bCi49CQ",
}
`;

exports[`createRequest has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "callback": "https://myserver.com",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "5OxjY-V3fdvRyv4XF5fayeQI9EiDZFrx47AUMnh8WnpUQes8qw6vs12bP9F0OnjEfYCkBmM-hTcq7OtTQBK4Ww",
}
`;

exports[`createRequest has correct payload in JWT requesting a bad accountType 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "kUs_SxnmUvmAa7-NKJ_qiIoODAB_MgCEMdmkw6pGy3ULMwQ-KWh6-M5CYkvPxPyHoDHVB5yGcFmTMxp_PU8a-g",
}
`;

exports[`createRequest has correct payload in JWT requesting a specific accountType 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "act": "devicekey",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "eJaJnJwIXz91Yuo522likH5HX8DrLRoZGayAcvTPXBQ5FnZePjUAPmM03cklPyejdBfhUqIHezXwn146pvvJDA",
}
`;

exports[`createRequest has correct payload in JWT requesting a specific network_id 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "net": "0x4",
    "type": "shareReq",
  },
  "signature": "itf9cAdqqOz635UidRXvCIV6U3DNbzBfDGivELfjypXbRGZgTS7CyDSJxjKwSRxGRqyhof9XzEKqzrldngTeAA",
}
`;

exports[`createRequest ignores unsupported request parameters 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "kUs_SxnmUvmAa7-NKJ_qiIoODAB_MgCEMdmkw6pGy3ULMwQ-KWh6-M5CYkvPxPyHoDHVB5yGcFmTMxp_PU8a-g",
}
`;

exports[`receive returns profile mixing public and private claims 1`] = `
Object {
  "address": "0x001122",
  "name": "Davie",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile mixing public and private claims 2`] = `
Object {
  "address": "0x001122",
  "name": "Davie",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "address": "0x001122",
  "name": "Davie",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134,
      "iat": 1485321133,
      "iss": "0x001122",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpc3MiOiIweDAwMTEyMiIsImlhdCI6MTQ4NTMyMTEzMywic3ViIjoiMHgxMTIyMzMiLCJjbGFpbSI6eyJlbWFpbCI6ImJpbmdiYW5nYnVuZ0BlbWFpbC5jb20ifSwiZXhwIjoxNDg1MzIxMTM0fQ.kO5mGjkW6vkvE_JjWfKrt-ZSITo_EXoRIslhDCss78bM2458nQF-wBiFzIWtvjC38TR2NrLh6trz8wG_auTEig",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`receive returns profile mixing public and private claims and verified credentials 2`] = `
Object {
  "address": "0x001122",
  "name": "Davie",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134,
      "iat": 1485321133,
      "iss": "0x001122",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpc3MiOiIweDAwMTEyMiIsImlhdCI6MTQ4NTMyMTEzMywic3ViIjoiMHgxMTIyMzMiLCJjbGFpbSI6eyJlbWFpbCI6ImJpbmdiYW5nYnVuZ0BlbWFpbC5jb20ifSwiZXhwIjoxNDg1MzIxMTM0fQ.kO5mGjkW6vkvE_JjWfKrt-ZSITo_EXoRIslhDCss78bM2458nQF-wBiFzIWtvjC38TR2NrLh6trz8wG_auTEig",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`receive returns profile with device key claims 1`] = `
Object {
  "address": "0x001122",
  "deviceKey": "0xdeviceKey",
  "name": "David Chaum",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile with only public claims 1`] = `
Object {
  "address": "0x001122",
  "name": "David Chaum",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile with only public claims 2`] = `
Object {
  "address": "0x001122",
  "name": "David Chaum",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile with private chain network id claims 1`] = `
Object {
  "address": "0x001122",
  "name": "David Chaum",
  "networkAddress": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile with private chain network id claims 2`] = `
Object {
  "address": "0x001122",
  "name": "David Chaum",
  "networkAddress": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;
